Initial commit: SmartCalc Projekt

--- a/index.html
+++ b/index.html
@@ -12,17 +12,11 @@
 <body>
   <h1>Werkstudentenjobs</h1>
 
-  <div class="job">
-    <h2>Werkstudent IT bei Startup X</h2>
-    <p>Java, Git, REST APIs</p>
-    <button>Bewerben</button>
-  </div>
+  <!-- Hier kommen die Jobs rein -->
+  <div id="job-list"></div>
 
-  <div class="job">
-    <h2>Werkstudent Webentwicklung bei Agentur Y</h2>
-    <p>HTML, CSS, JavaScript</p>
-    <button>Bewerben</button>
-  </div>
-
+  <!-- JavaScript einbinden -->
+  <script src="script.js"></script>
 </body>
+
 </html>
